# veggie-vision

./: README.md  pyproject.toml
veggie_vision/: model.ipynb
veggie_vision/utils/: _logger.py  _validation.py  config.json
